Bug 335993 - save checksum does not work as expected
Summary: save checksum does not work as expected
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-09 10:10 UTC by milan007
Modified: 2018-05-06 00:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description milan007 2014-06-09 10:10:00 UTC
After computing checksum (MD5) on RO folder I try save checksum to another place. Dialog require the file already exists, otherwise does not accept my place. 

Also original filename disappear from filesave dialog while browsing directory structure 

Reproducible: Always

Steps to Reproduce:
1.from menu select File -> create checksum.
2. after chcksum done, dialog appears with save option and Select-path-to-save icon
3. try save to another place. filename dissapear. 
4. If you previously select filename by mouse and paste it back in final destination, dialog says : there is no requested file !! .I have czech locale, maybe some GUI elements has other names
Actual Results:  
checksum must be saved to existing file (overwrite it )

Expected Results:  
checksum original filename must stay in filesavedialog, and finally saved as new file
Comment 1 milan007 2014-06-09 10:12:52 UTC
This bug appears on OpenSuse13.1, 
Krusader
Verze 2.4.0-beta3 "Single Step"
Používající vývojovou platformu KDE 4.12.2
Comment 2 Alex Bikadorov 2017-03-14 20:27:58 UTC
Git commit d982fb7dabf585f453b4bbd50e3952daf95ad5fb by Alexander Bikadorov.
Committed on 09/03/2017 at 17:48.
Pushed by abikadorov into branch 'master'.

Dialogs: fix filename dialog when saving created checksum file

KUrlRequester is for opening files, not saving.

FIXED: [ 335993 ] save checksum does not work as expected

M  +23   -53   krusader/Dialogs/checksumdlg.cpp
M  +1    -1    krusader/Dialogs/checksumdlg.h

https://commits.kde.org/krusader/d982fb7dabf585f453b4bbd50e3952daf95ad5fb