Dialogs: fix filename dialog when saving created checksum file

KUrlRequester is for opening files, not saving.

FIXED: [ 335993 ] save checksum does not work as expected

BUG: 335993